--- a/client/src/component/Scene.module.css
+++ b/client/src/component/Scene.module.css
@@ -1,36 +1,62 @@
 .scene {
-    flex: 1;
-    position: relative;
+  flex: 1;
+  position: relative;
 }
 
 .actors {
-    position: absolute;
-    display: flex;
-    width: 100%;
-    top: 0;
-    height: 40%;
+  position: absolute;
+  display: flex;
+  width: 100%;
+  top: 0;
+  height: 40%;
 }
 
 .dialogue {
-    position: absolute;
-    width: 100%;
-    bottom: 0;
-    top: 40%;
-    display: flex;
-    flex-direction: column;
-    overflow-y: scroll;
+  position: absolute;
+  bottom: 10px;
+  top: 40%;
+  left: 10px;
+  right: 10px;
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  overflow-y: scroll;
+  border: 2px solid grey;
+  border-radius: 4px;
+}
+
+.arrow {
+  content: "";
+  position: absolute;
+  top: -10px;
+  border: 20px solid transparent;
+  border-bottom-color: grey;
+  bottom: 60%;
+  left: 50%;
+  transition: 300ms ease-in-out left;
+  display: none;
+}
+
+.arrow[data-actor="left"] {
+    left: 30%;
+    display: block;
+}
+
+.arrow[data-actor="right"] {
+    left: 70%;
+    display: block;
 }
 
 .leftActor,
 .rightActor {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 50%;
-    height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 50%;
+  height: 100%;
 }
 
 .confirm {
-    margin-top: 1em;
+  margin-top: 1em;
 }
