--- a/client/src/component/Narration.module.css
+++ b/client/src/component/Narration.module.css
@@ -1,3 +1,11 @@
 .menu {
     margin-top: 10px;
 }
+
+.container {
+    min-height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-between;
+}
