--- a/client/src/component/Question.module.css
+++ b/client/src/component/Question.module.css
@@ -2,6 +2,8 @@
     margin-bottom: 1em;
     display: flex;
     flex-direction: column;
+    min-height: 100%;
+    align-items: flex-start;
 }
 
 .menu {
@@ -12,4 +14,5 @@
 
 .question {
     margin-bottom: 10px;
+    height: 100%;
 }
