--- a/client/src/component/Scene.module.css
+++ b/client/src/component/Scene.module.css
@@ -9,7 +9,11 @@
 }
 
 .scene[data-environment="room"] {
-  background: url("/room.png") repeat-x;
+  background: url("/room.png") no-repeat;
+  background-size: cover;
+  image-rendering: pixelated;
+  image-rendering: -moz-crisp-edges;
+  image-rendering: crisp-edges;
 }
 
 .actors {
@@ -22,7 +26,7 @@
 
 .dialogue {
   position: absolute;
-  bottom: 10px;
+  bottom: 20px;
   top: 40%;
   left: 10px;
   right: 10px;
@@ -30,8 +34,9 @@
   display: flex;
   flex-direction: column;
   overflow-y: scroll;
-  border: 2px solid grey;
-  border-radius: 4px;
+  border-image: url(/ramka.png) 17 / 32px / 20px round;
+  background: #e8dbc6;
+
 }
 
 .arrow {
