--- a/client/src/component/Scene.module.css
+++ b/client/src/component/Scene.module.css
@@ -6,14 +6,75 @@
 .scene[data-environment] {
   background-size: cover;
   background-position: center;
-}
-
-.scene[data-environment="room"] {
-  background: url("/room.png") no-repeat;
-  background-size: cover;
   image-rendering: pixelated;
   image-rendering: -moz-crisp-edges;
   image-rendering: crisp-edges;
+}
+
+.scene[data-environment="room"] {
+  background-image: url("/room.png");
+}
+
+.scene[data-environment="meadow"] {
+  background-image: url(/meadow.png), linear-gradient(#9ddde3, #9ddde3, #278c2b);
+  background-size: contain;
+  background-position: top;
+  background-color: #4ecd57;
+  background-repeat: no-repeat;
+}
+
+.scene[data-environment="party"] {
+  background-image: url(/party.png),
+    linear-gradient(#093c17, #0a3a11 0%, #093c17);
+  background-size: contain;
+  background-position: top;
+  background-repeat: no-repeat;
+}
+
+.scene[data-environment="party"] .actors > * {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.scene[data-environment="party"] .actors > *:nth-child(1) {
+  top: 350px;
+  left: 90px;
+}
+
+.scene[data-environment="party"] .actors > *:nth-child(2) {
+  top: 120px;
+  left: 20px;
+}
+
+.scene[data-environment="party"] .actors > *:nth-child(3) {
+  top: 120px;
+  left: 190px;
+  transform: scaleX(-1);
+}
+
+.scene[data-environment="party"] .actors > *:nth-child(4) {
+  top: 180px;
+  left: -80px;
+}
+
+.scene[data-environment="party"] .actors > *:nth-child(5) {
+  top: 300px;
+  left: -80px;
+  transform: scaleX(-1);
+}
+
+.scene[data-environment="party"] .actors > *:nth-child(6) {
+  top: -63px;
+  left: -60px;
+}
+
+.scene[data-environment="party"] .dialogue {
+  top: 80%;
 }
 
 .actors {
@@ -36,7 +97,6 @@
   overflow-y: scroll;
   border-image: url(/ramka.png) 17 / 32px / 20px round;
   background: #e8dbc6;
-
 }
 
 .arrow {
@@ -52,15 +112,15 @@
 }
 
 .arrow[data-actor="left"] {
-    left: 30%;
-    display: block;
-    opacity: 1;
+  left: 30%;
+  display: block;
+  opacity: 1;
 }
 
 .arrow[data-actor="right"] {
-    left: 70%;
-    display: block;
-    opacity: 1;
+  left: 70%;
+  display: block;
+  opacity: 1;
 }
 
 .leftActor,
