--- a/client/src/app/page.module.css
+++ b/client/src/app/page.module.css
@@ -4,5 +4,8 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  max-width: 600px;
+  margin: 0 auto;
+  overflow: hidden;
 }
 
